Removed broken Apply button in applets' settings dialog.

BUG: 322015
FIXED-IN: 2.8